--- a/css/style.css
+++ b/css/style.css
@@ -2,6 +2,7 @@ body {
   font-family: PT Sans Narrow, Arial, serif;
   font-size: 14px;
   line-height: 18px;
+  font-weight: 400;
 }
 
 .catalog-title {
