--- a/css/style.css
+++ b/css/style.css
@@ -5,7 +5,7 @@ body {
   font-weight: 400;
 }
 
-.catalog-title {
+h1 {
   font-size: 30px;
   line-height: 42px;
   font-weight: bold;
@@ -61,7 +61,7 @@ body {
   background-color: #d6d421;
 }
 
-.catalog-title {
+h1 {
   margin-bottom: 21px;
   width: 800px;
   background-color: #1dca21;
@@ -70,7 +70,7 @@ body {
 .breadcrumbs {
   width: 800px;
   background-color: #1dca21;
-  margin-bottom: 52px;
+  margin-bottom: 53px;
 }
 
 .filters {
@@ -106,10 +106,12 @@ body {
 }
 
 .pages {
+  display: inline-block;
   width: 220px;
   background-color: #1dca21;
   margin-left: 240px;
   clear: both;
+  vertical-align: middle;
 }
 
 .main-footer {
@@ -145,4 +147,57 @@ body {
 .category-item,
 .mark-item {
   display: block;
+}
+
+.item-gallery {
+  float: left;
+  width: 480px;
+  background-color: #1dca21;
+  font-size: 0;
+  margin-top: 57px;
+}
+
+.item-main-img {
+  width: 460px;
+  height: 499px;
+  margin-bottom: 21px;
+}
+
+.item-gallery a {
+  display: inline-block;
+  width: 140px;
+  height: 149px;
+  margin-right: 20px;
+  vertical-align: middle;
+}
+
+.item-gallery a:last-child {
+  margin-right: 0;
+}
+
+.item-description {
+  float: right;
+  width: 400px;
+  background-color: #d6d421;
+}
+
+.availability {
+  float: right;
+  width: 400px;
+  background-color: #1dca21;
+  /*margin-top: 80px;*/
+}
+
+.avail-info {
+  display: block;
+  float: left;
+  width: 230px;
+  background-color: #1484e3;
+}
+
+.item-code {
+  display: block;
+  float: right;
+  width: 140px;
+  background-color: #1484e3;
 }
