Добавил колонки в wrapper для catalog.html

--- a/css/style.css
+++ b/css/style.css
@@ -70,24 +70,34 @@ h1 {
 .breadcrumbs {
   width: 800px;
   background-color: #1dca21;
-  /*float: left;*/
   margin-bottom: 53px;
 }
 
-.filters {
+.wrapper {
+  background-color: #453a3a;
+}
+
+.catalog-left-column {
   float: left;
   width: 220px;
+  background-color: #eb7c23;
+}
+
+.catalog-right-column {
+  float: right;
+  background-color: #eb7c23;
+  width: 700px;
+}
+
+.filters {
+  width: 220px;
   background-color: #d6d421;
-  /*margin-top: 53px;*/
-  margin-right: 20px;
 }
 
 .list-items {
-  float: left;
   width: 700px;
   background-color: #d6d421;
   font-size: 0;
-  margin-top: 3px;
   margin-bottom: 45px;
 }
 
@@ -109,12 +119,8 @@ h1 {
 }
 
 .pages {
-  /*display: inline-block;*/
   width: 220px;
   background-color: #1dca21;
-  margin-left: 240px;
-  clear: both;
-  vertical-align: middle;
 }
 
 .main-footer {
@@ -218,9 +224,4 @@ h1 {
   width: 310px;
   background-color: #d6d421;
   margin-top: 65px;
-}
-
-.wrapper {
-  background-color: #453a3a;
-  /*margin-top: 57px;*/
 }
